Added listener method.

--- a/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
@@ -29,6 +29,7 @@ services:
             - { name: kernel.event_listener, event: dif.approved, method: onApproved }
             - { name: kernel.event_listener, event: dif.rejected, method: onRejected }
             - { name: kernel.event_listener, event: dif.unlocked, method: onUnlocked }
+            - { name: kernel.event_listener, event: dif.unlock_requested, method: onUnlockRequested }
 
     pelagos.form.type.dif:
         class: Pelagos\Bundle\AppBundle\Form\DIFType
