--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -63,3 +63,7 @@ services:
         class: Pelagos\Bundle\AppBundle\Security\DIFVoter
         tags:
             - { name: security.voter }
+    dataset_voter:
+        class: Pelagos\Bundle\AppBundle\Security\DatasetVoter
+        tags:
+            - { name: security.voter }
