Added Datasets to API

--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing_api.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing_api.yml
@@ -51,3 +51,9 @@ difs:
     resource: Pelagos\Bundle\AppBundle\Controller\Api\DIFController
     name_prefix: difs_
     prefix: difs
+
+datasets:
+    type: rest
+    resource: Pelagos\Bundle\AppBundle\Controller\Api\DatasetController
+    name_prefix: datasets_
+    prefix: datasets
