Renamed events, added one.

--- a/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
@@ -25,10 +25,11 @@ services:
         class: Pelagos\Event\DIFListener
         arguments: ["@twig", "@mailer", "@security.token_storage", "%mailer_from_addr%", "%mailer_from_name%"]
         tags:
-            - { name: kernel.event_listener, event: dif.submitted, method: onSubmitted }
-            - { name: kernel.event_listener, event: dif.approved, method: onApproved }
-            - { name: kernel.event_listener, event: dif.unlocked, method: onUnlocked }
-            - { name: kernel.event_listener, event: dif.unlock_requested, method: onUnlockRequested }
+            - { name: kernel.event_listener, event: pelagos.entity.dif.created, method: onCreated }
+            - { name: kernel.event_listener, event: pelagos.entity.dif.submitted, method: onSubmitted }
+            - { name: kernel.event_listener, event: pelagos.entity.dif.approved, method: onApproved }
+            - { name: kernel.event_listener, event: pelagos.entity.dif.unlock_requested, method: onUnlockRequested }
+            - { name: kernel.event_listener, event: pelagos.entity.dif.unlocked, method: onUnlocked }
 
     pelagos.form.type.dif:
         class: Pelagos\Bundle\AppBundle\Form\DIFType
