--- a/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
@@ -25,7 +25,7 @@ services:
         class: Pelagos\Event\DIFListener
         arguments: ["@twig", "@mailer", "@security.token_storage", "%mailer_from_addr%", "%mailer_from_name%"]
         tags:
-            - { name: kernel.event_listener, event: pelagos.entity.dif.created, method: onCreated }
+            - { name: kernel.event_listener, event: pelagos.entity.dif.dataset_created, method: onCreated }
             - { name: kernel.event_listener, event: pelagos.entity.dif.submitted, method: onSubmitted }
             - { name: kernel.event_listener, event: pelagos.entity.dif.approved, method: onApproved }
             - { name: kernel.event_listener, event: pelagos.entity.dif.unlock_requested, method: onUnlockRequested }
