--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -59,6 +59,7 @@ doctrine:
                 is_bundle: false
                 prefix: Pelagos\Entity
                 alias: Pelagos
+        naming_strategy: doctrine.orm.naming_strategy.underscore
 
 # Swiftmailer Configuration
 swiftmailer:
