--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -105,3 +105,4 @@ simple_things_entity_audit:
         - Pelagos\Entity\PersonDataRepository
         - Pelagos\Entity\PersonFundingOrganization
         - Pelagos\Entity\PersonResearchGroup
+        - Pelagos\Entity\DatasetSubmission
