--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -28,6 +28,6 @@ services:
         class: Pelagos\Component\Ldap\Ldap
         arguments: ["@pelagos.ldap_client","%ldap_bind_dn%","%ldap_bind_pw%","%ldap_people_ou%"]
 
-    pelagos.factory.dataset:
-        class: Pelagos\Factory\DatasetFactory
+    pelagos.util.udi:
+        class: Pelagos\Util\Udi
         arguments: ["@doctrine.orm.entity_manager"]
