--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -31,3 +31,8 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    # Parameters for POSIX account generation
+    homedir_prefix:
+    posix_starting_uid:
+    posix_gid:
