--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -32,6 +32,6 @@ services:
         class: Pelagos\Factory\DatasetFactory
         arguments: ["@doctrine.orm.entity_manager"]
 
-    pelagos.util.posixudi:
+    pelagos.util.posixuid:
         class: Pelagos\Util\POSIXUID
         arguments: ["@doctrine.orm.entity_manager", "@pelagos.ldap", "@pelagos.entity.handler" ]
