Added an account API with a method to retrieve a file listing for an account's incoming directory.

--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing_api.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing_api.yml
@@ -57,3 +57,9 @@ datasets:
     resource: Pelagos\Bundle\AppBundle\Controller\Api\DatasetController
     name_prefix: datasets_
     prefix: datasets
+
+account:
+    type: rest
+    resource: Pelagos\Bundle\AppBundle\Controller\Api\AccountController
+    name_prefix: account_
+    prefix: account
