GCS and misc cleanup.

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -34,4 +34,4 @@ services:
 
     pelagos.util.posixuid:
         class: Pelagos\Util\POSIXify
-        arguments: ["@doctrine.orm.entity_manager", "@pelagos.ldap", "@pelagos.entity.handler", '%posix_starting_uid%', '%posix_gid%', '%homedir_prefix%']
+        arguments: ["@doctrine.orm.entity_manager", "@pelagos.ldap", "@pelagos.entity.handler", '%posix_starting_uid%', '%posix_gid%']
