--- a/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
@@ -26,10 +26,16 @@ services:
         arguments: ["@twig", "@mailer", "@security.token_storage", "%mailer_from_addr%", "%mailer_from_name%"]
         tags:
             - { name: kernel.event_listener, event: pelagos.entity.dif.dataset_created, method: onCreated }
-            - { name: kernel.event_listener, event: pelagos.entity.dif.submitted, method: onSubmitted }
+            - { name: kernel.event_listener, event: pelagos.entity.dif.created, method: onSubmitted }
             - { name: kernel.event_listener, event: pelagos.entity.dif.approved, method: onApproved }
             - { name: kernel.event_listener, event: pelagos.entity.dif.unlock_requested, method: onUnlockRequested }
             - { name: kernel.event_listener, event: pelagos.entity.dif.unlocked, method: onUnlocked }
+
+    pelagos.datasetsubmission.listener:
+        class: Pelagos\Event\DatasetSubmissionListener
+        arguments: ["@twig", "@mailer", "@security.token_storage", "%mailer_from_addr%", "%mailer_from_name%"]
+        tags:
+            - { name: kernel.event_listener, event: pelagos.entity.dataset_submission.created, method: onCreated }
 
     pelagos.form.type.dif:
         class: Pelagos\Bundle\AppBundle\Form\DIFType
