--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -4,3 +4,6 @@ pelagos_legacy:
 
 pelagos:
     resource: "@PelagosAppBundle/Resources/config/routing.yml"
+
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
