--- a/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
@@ -36,6 +36,8 @@ services:
         arguments: ["@twig", "@mailer", "@security.token_storage", "%mailer_from_addr%", "%mailer_from_name%"]
         tags:
             - { name: kernel.event_listener, event: pelagos.entity.dataset_submission.created, method: onCreated }
+            - { name: kernel.event_listener, event: pelagos.entity.dataset_submission.submitted, method: onSubmitted }
+            - { name: kernel.event_listener, event: pelagos.entity.dataset_submission.updated, method: onUpdated }
 
     pelagos.form.type.dif:
         class: Pelagos\Bundle\AppBundle\Form\DIFType
