Added a new logger channel: filer

--- a/app/config/config_drupal_prod.yml
+++ b/app/config/config_drupal_prod.yml
@@ -9,6 +9,10 @@ framework:
 
 monolog:
     handlers:
+        filer:
+            type:     stream
+            path:     "%kernel.logs_dir%/filer.log"
+            channels: ["filer"]
         main:
             type:         fingers_crossed
             action_level: error
