--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -14,6 +14,10 @@ web_profiler:
 
 monolog:
     handlers:
+        filer:
+            type:    stream
+            path:    "%kernel.logs_dir%/filer.log"
+            channels: ["filer"]
         main:
             type:   stream
             path:   "%kernel.logs_dir%/%kernel.environment%.log"
