Dispatch an entity event after dataset and metadata are processed.

--- a/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
@@ -39,6 +39,6 @@ services:
 
     pelagos.rabbit.consumer.filer:
         class: Pelagos\Bundle\AppBundle\Rabbit\Consumer\FilerConsumer
-        arguments: ["@doctrine.orm.entity_manager", "@pelagos.util.data_store", "@logger"]
+        arguments: ["@doctrine.orm.entity_manager", "@pelagos.util.data_store", "@logger", "@pelagos.event.entity_event_dispatcher"]
         tags:
             - { name: monolog.logger, channel: filer }
