--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -32,6 +32,6 @@ services:
         class: Pelagos\Util\Udi
         arguments: ["@doctrine.orm.entity_manager"]
 
-    pelagos.util.posixify:
+    pelagos.util.posixuid:
         class: Pelagos\Util\POSIXify
         arguments: ["@doctrine.orm.entity_manager", "@pelagos.ldap", "@pelagos.entity.handler", '%posix_starting_uid%', '%posix_gid%']
