Made label for "Other Sources" a configuration parameter.

--- a/web/modules/tree/config.ini.example
+++ b/web/modules/tree/config.ini.example
@@ -58,3 +58,5 @@ other_sources_folder_action = ""
 
 other_sources_color = "black"
 other_sources_action = ""
+
+other_sources_label = "Other Sources"
