Several improvements, including:
* added retriever consumer service
* moved RabbitMQ parameters to parameters.yml
* refactored RabbitMQ exchanges and queues fabric

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -31,6 +31,11 @@ parameters:
     # When to warn account holders of soon to expire passwords (as ISO 8601 durations)
     account_password_expiration_warn: [P7D, P1D]
 
+    rabbit_mq_host: localhost
+    rabbit_mq_port: 5672
+    rabbit_mq_user: pelagos
+    rabbit_mq_pass: pelagos
+
     data_store_directory:    /san/data/store
     data_download_directory: /san/data/download
 
