--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -15,9 +15,13 @@ web_profiler:
 monolog:
     handlers:
         filer:
-            type:    stream
-            path:    "%kernel.logs_dir%/filer.log"
+            type:     stream
+            path:     "%kernel.logs_dir%/filer.log"
             channels: ["filer"]
+        retriever:
+            type:     stream
+            path:     "%kernel.logs_dir%/retriever.log"
+            channels: ["retriever"]
         main:
             type:   stream
             path:   "%kernel.logs_dir%/%kernel.environment%.log"
