--- a/app/config/config_drupal_prod.yml
+++ b/app/config/config_drupal_prod.yml
@@ -13,6 +13,10 @@ monolog:
             type:     stream
             path:     "%kernel.logs_dir%/filer.log"
             channels: ["filer"]
+        retriever:
+            type:     stream
+            path:     "%kernel.logs_dir%/retriever.log"
+            channels: ["retriever"]
         main:
             type:         fingers_crossed
             action_level: error
