--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -111,3 +111,24 @@ simple_things_entity_audit:
 
 fos_js_routing:
     routes_to_expose: [ .* ]
+
+old_sound_rabbit_mq:
+    connections:
+        default:
+            host:     'localhost'
+            port:     5672
+            user:     'guest'
+            password: 'guest'
+            vhost:    '/'
+            lazy:     false
+            connection_timeout: 3
+            read_write_timeout: 3
+            keepalive: false
+            heartbeat: 0
+    consumers:
+        homedir_creator:
+            connection:       default
+            exchange_options: { name: "%pelagos_name%.homedir_creator", type: direct }
+            queue_options:    { name: "%pelagos_name%.homedir_creator" }
+            callback:         pelagos.rabbit.consumer.homedir_creator
+
