--- a/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
@@ -33,11 +33,12 @@ services:
 
     pelagos.datasetsubmission.listener:
         class: Pelagos\Event\DatasetSubmissionListener
-        arguments: ["@twig", "@mailer", "@security.token_storage", "%mailer_from_addr%", "%mailer_from_name%"]
+        arguments: ["@twig", "@mailer", "@swiftmailer.transport.real", "@security.token_storage", "%mailer_from_addr%", "%mailer_from_name%"]
         tags:
             - { name: kernel.event_listener, event: pelagos.entity.dataset_submission.created, method: onCreated }
             - { name: kernel.event_listener, event: pelagos.entity.dataset_submission.submitted, method: onSubmitted }
             - { name: kernel.event_listener, event: pelagos.entity.dataset_submission.resubmitted, method: onResubmitted }
+            - { name: kernel.event_listener, event: pelagos.entity.dataset_submission.dataset_processed, method: onDatasetProcessed }
 
     pelagos.form.type.dif:
         class: Pelagos\Bundle\AppBundle\Form\DIFType
