--- a/app/config/config_drupal_dev.yml
+++ b/app/config/config_drupal_dev.yml
@@ -24,6 +24,10 @@ monolog:
             type:     stream
             path:     "%kernel.logs_dir%/retriever.log"
             channels: ["retriever"]
+        posixify:
+            type:     stream
+            path:     "%kernel.logs_dir%/posixify.log"
+            channels: ["posixify"]
         main:
             type:   stream
             path:   "%kernel.logs_dir%/%kernel.environment%.log"
