--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -130,6 +130,9 @@ old_sound_rabbit_mq:
         dataset_submission:
             connection:       default
             exchange_options: { name: 'dataset_submission', type: topic }
+        create_homedir:
+            connection:       default
+            exchange_options: { name: 'create_homedir', type: direct }
     consumers:
         filer:
             connection:       default
@@ -152,10 +155,7 @@ old_sound_rabbit_mq:
                     - 'dataset.HTTP'
         posixify:
             connection:       default
-            exchange_options: { name: 'dataset_submission', type: topic }
-            callback:         pelagos.rabbit.consumer.dataset_submission.posixify
-            idle_timeout:     1
+            exchange_options: { name: 'create_homedir', type: direct }
+            callback:         pelagos.rabbit.consumer.create_homedir
             queue_options:
-                name: 'posixify'
-                routing_keys:
-                    - 'dataset.posixify'
+                name: 'create_homedir'
