Added missing homedir_prefix to parameters.yml.dist

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -38,6 +38,7 @@ parameters:
 
     data_store_directory:    /san/data/store
     data_download_directory: /san/data/download
+    homedir_prefix:          /san/home
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
