--- a/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
@@ -61,6 +61,6 @@ services:
 
     pelagos.rabbit.consumer.create_homedir:
         class: Pelagos\Bundle\AppBundle\Rabbit\Consumer\CreateHomedirConsumer
-        arguments: ["@doctrine.orm.entity_manager", "@logger", "%homedir_prefix%" ,"@pelagos.ldap" ]
+        arguments: ["@doctrine.orm.entity_manager", "@logger", "@pelagos.ldap" ]
         tags:
             - { name: monolog.logger, channel: posixify }
