--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -32,8 +32,8 @@ services:
         class: Pelagos\Util\Udi
         arguments: ["@doctrine.orm.entity_manager"]
 
-    pelagos.util.posixify:
-        class: Pelagos\Util\POSIXify
+    pelagos.util.posixify_account:
+        class: Pelagos\Util\POSIXifyAccount
         arguments: ["@doctrine.orm.entity_manager", "@pelagos.ldap", "@pelagos.entity.handler", '%posix_starting_uid%', '%posix_gid%', '%homedir_prefix%']
 
     pelagos.util.data_store:
