--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -34,7 +34,7 @@ services:
 
     pelagos.util.posixify_account:
         class: Pelagos\Util\POSIXifyAccount
-        arguments: ["@doctrine.orm.entity_manager", "@pelagos.ldap", "@pelagos.entity.handler", '%posix_starting_uid%', '%posix_gid%', '%homedir_prefix%']
+        arguments: ["@doctrine.orm.entity_manager", "@pelagos.ldap", "@pelagos.entity.handler", '%posix_starting_uid%', '%posix_gid%', '%homedir_prefix%', "@old_sound_rabbit_mq.create_homedir_producer"]
 
     pelagos.util.data_store:
         class: Pelagos\Util\DataStore
