Added basic pieces of the Dataset Monitoring UI controller.

--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
@@ -30,3 +30,6 @@ pelagos_dif_ui:
     
 pelagos_dataset_submission_ui:
     resource: Pelagos\Bundle\AppBundle\Controller\UI\DatasetSubmissionController
+
+pelagos_datset_monitoring_ui:
+    resource: Pelagos\Bundle\AppBundle\Controller\UI\DatasetMonitoringController
