--- a/app/config/config_drupal_prod.yml
+++ b/app/config/config_drupal_prod.yml
@@ -18,10 +18,10 @@ monolog:
             type:     stream
             path:     "%kernel.logs_dir%/retriever.log"
             channels: ["retriever"]
-        posixify:
+        create_homedir:
             type:     stream
-            path:     "%kernel.logs_dir%/posixify.log"
-            channels: ["posixify"]
+            path:     "%kernel.logs_dir%/create_homedir.log"
+            channels: ["create_homedir"]
         main:
             type:         fingers_crossed
             action_level: error
