Start of Tree API controller, and research awards template.

--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing_api.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing_api.yml
@@ -63,3 +63,9 @@ account:
     resource: Pelagos\Bundle\AppBundle\Controller\Api\AccountController
     name_prefix: account_
     prefix: account
+
+tree:
+    type: rest
+    resource: Pelagos\Bundle\AppBundle\Controller\Api\TreeController
+    name_prefix: tree_
+    prefix: tree
