Initials Dataland page, still needs all of Metadata.

--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
@@ -33,3 +33,6 @@ pelagos_dataset_submission_ui:
 
 pelagos_datset_monitoring_ui:
     resource: Pelagos\Bundle\AppBundle\Controller\UI\DatasetMonitoringController
+
+pelagos_dataland_ui:
+    resource: Pelagos\Bundle\AppBundle\Controller\UI\DatalandController
