--- a/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
@@ -5,6 +5,7 @@ services:
 
     pelagos.twig.extensions:
         class: Pelagos\Bundle\AppBundle\Twig\Extensions
+        arguments: ["%kernel.root_dir%"]
         public: false
         tags:
             - { name: twig.extension }
