Added controller for PubLink.

--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
@@ -18,7 +18,7 @@ pelagos_person_research_group_ui:
 
 pelagos_research_group_ui:
     resource: Pelagos\Bundle\AppBundle\Controller\UI\ResearchGroupController
-    
+
 pelagos_person_data_repository_ui:
     resource: Pelagos\Bundle\AppBundle\Controller\UI\PersonDataRepositoryController
 
@@ -27,9 +27,12 @@ pelagos_account_ui:
 
 pelagos_dif_ui:
     resource: Pelagos\Bundle\AppBundle\Controller\UI\DIFController
-    
+
 pelagos_dataset_submission_ui:
     resource: Pelagos\Bundle\AppBundle\Controller\UI\DatasetSubmissionController
 
 pelagos_datset_monitoring_ui:
     resource: Pelagos\Bundle\AppBundle\Controller\UI\DatasetMonitoringController
+
+pelagos_publication_dataset_link_ui:
+    resource: Pelagos\Bundle\AppBundle\Controller\UI\PublicationDatasetLinkController
