--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing_api.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing_api.yml
@@ -69,3 +69,9 @@ tree:
     resource: Pelagos\Bundle\AppBundle\Controller\Api\TreeController
     name_prefix: tree_
     prefix: tree
+
+metadata:
+    type: rest
+    resource: Pelagos\Bundle\AppBundle\Controller\Api\MetadataController
+    name_prefix: metadata_
+    prefix: metadata
