Get DIF geometry as WKT.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -74,6 +74,8 @@ doctrine:
             string_functions:
                 ST_Intersects: Jsor\Doctrine\PostGIS\Functions\ST_Intersects
                 ST_GeomFromText: Jsor\Doctrine\PostGIS\Functions\ST_GeomFromText
+                ST_AsText: Jsor\Doctrine\PostGIS\Functions\ST_AsText
+                ST_GeomFromGML: Jsor\Doctrine\PostGIS\Functions\ST_GeomFromGML
 
 # Swiftmailer Configuration
 swiftmailer:
