Create & populate new DatasetPublication controller.
* Created new controller and registered it.
* Moved from Publication controller into DatasetPublication controller.
* Adjusted routes in javascript.

--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing_api.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing_api.yml
@@ -76,6 +76,12 @@ publications:
     name_prefix: publications_
     prefix: publications
 
+dataset_publications:
+    type: rest
+    resource: Pelagos\Bundle\AppBundle\Controller\Api\DatasetPublicationController
+    name_prefix: dataset_publications_
+    prefix: dataset_publications
+
 metadata:
     type: rest
     resource: Pelagos\Bundle\AppBundle\Controller\Api\MetadataController
