DOI Request form.
Has DOI voter.
Also DOI entity.
Can be approved.
Still missing event triggers.

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -71,3 +71,7 @@ services:
         class: Pelagos\Bundle\AppBundle\Security\DatasetVoter
         tags:
             - { name: security.voter }
+    doi_request_voter:
+        class: Pelagos\Bundle\AppBundle\Security\DoiRequestVoter
+        tags:
+            - { name: security.voter }
