--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -42,6 +42,7 @@ twig:
     paths:
         "%kernel.root_dir%/../src/Pelagos/Bundle/AppBundle/Resources/views/template": templates
         "%kernel.root_dir%/../src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email": DIFEmail
+        "%kernel.root_dir%/../src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email": Email
 
 # Doctrine Configuration
 doctrine:
