--- a/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
@@ -46,7 +46,7 @@ services:
         class: Pelagos\Event\DOIRequestListener
         arguments: ["@twig", "@mailer", "@security.token_storage", "%mailer_from_addr%", "%mailer_from_name%"]
         tags:
-            - { name: kernel.event_listener, event: pelagos.entity.doi_request.doi_requsted, method: onDoiRequested }
+            - { name: kernel.event_listener, event: pelagos.entity.doi_request.doi_requested, method: onDoiRequested }
             - { name: kernel.event_listener, event: pelagos.entity.doi_request.doi_issued, method: onDoiIssued }
 
     pelagos.form.type.dif:
