rewrote getDMs and getDRPMs.

--- a/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
@@ -44,7 +44,7 @@ services:
 
     pelagos.doirequest.listener:
         class: Pelagos\Event\DOIRequestListener
-        arguments: ["@twig", "@mailer", "@security.token_storage", "%mailer_from_addr%", "%mailer_from_name%"]
+        arguments: ["@twig", "@mailer", "@security.token_storage", "%mailer_from_addr%", "%mailer_from_name%", "@pelagos.entity.handler"]
         tags:
             - { name: kernel.event_listener, event: pelagos.entity.doi_request.doi_requested, method: onDoiRequested }
             - { name: kernel.event_listener, event: pelagos.entity.doi_request.doi_issued, method: onDoiIssued }
