--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
@@ -45,3 +45,6 @@ pelagos_stats_ui:
 
 pelagos_doi_request_ui:
     resource: Pelagos\Bundle\AppBundle\Controller\UI\DoiRequestController
+
+pelagos_mdapp_ui:
+    resource: Pelagos\Bundle\AppBundle\Controller\UI\MdAppController
