--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -18,3 +18,6 @@ _main:
 _assetic:
     resource: .
     type:     assetic
+
+pelagos_dev:
+    resource: Pelagos\Bundle\AppBundle\Controller\DevController
